maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: not enough arguments for method setDirection: (x$1: plm.universe.Direction)Unit.
Unspecified value parameter x$1.
				case Direction.NORTH => setDirection()
                                                                    ^