maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() 
{
	var virage = 0
	
	def keepHandOnSideWall()
	{
		gauche()
		if(estFaceMur())
		{
			droite()
			if(!estFaceMur())
				avance()
			else	droite(); virage = virage+1
		}
		else avance(); virage = virage-1
	}
		
	while(!estSurBiscuit())
	{
		if(virage == 0)
		{
			getDirection() match
			{
				case Direction.NORTH => setDirection()
			}
		}
	}

	prendBiscuit()
}
